# candle-moe-rust

./: Cargo.toml  README.md  build.rs  run.sh
src/: lib.rs  main.rs  mod.rs  qwen3_base.rs  qwen3_moe.rs  qwen3_moe_optimized.rs
src/cuda/: mod.rs  moe_gemm.cu  moe_gemm.rs  moe_gemm_ptx.rs
