[package]
name = "candle-moe-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["cuda"]
cuda = ["candle-core/cuda"]

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = ["cuda"]}
candle-transformers = { git = "https://github.com/huggingface/candle.git"}
hf-hub = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
tokenizers = "0.20"
half = { version = "2.3", features = ["std"] }
